--- a/report/report.tex
+++ b/report/report.tex
@@ -101,7 +101,7 @@ Now use ant to compile the sources and build the runnable jar:
   $ ant compile jar
 \end{lstlisting}
 
-If you have no proxy, initialize one.
+If you have no proxy, initialize one:
 
 \begin{lstlisting}[language=bash]
   $ grid-proxy-init
